--- a/electron-quick-start-es6/index.html
+++ b/electron-quick-start-es6/index.html
@@ -12,5 +12,5 @@
     and Electron <script>document.write(process.versions.electron)</script>.
   </body>
 
-  <script src="/dev-dist/renderer.js"></script>
+  <script src="./dist/src/app/renderer.js"></script>
 </html>
